--- a/application/view/index/index.rhtml
+++ b/application/view/index/index.rhtml
@@ -5,75 +5,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>CW-index-{$domain}</title>
+  <title>Crowd Writing--{$domain}</title>
   <link href="stylesheets/app.css" rel="stylesheet" type="text/css"> 
   <link href="stylesheets/font-awesome.css" rel="stylesheet" type="text/css"> 
   <script src="javascripts/vendor/custom.modernizr.js"></script>
 </head>
 <body>
-  <nav class="top-bar">
-    <ul class="title-area">
-      <!-- Title Area -->
-      <li class="name">
-        <h1><a href="#">CW </a></h1>
-      </li>
-      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-    </ul>
-    <section class="top-bar-section">
-      <ul class="left">
-        <li><a href="/"><span><i class="icon-pencil"></i> Write</span></a></li>
-        <li><a href="browse"><span>Browse</span></a></li>
-        <li><a href="explore"><span>Explore</span></a></li>
-        <li><a href="about"><span>About</span></a></li>
-      </ul>
-      <ul class="right">
-        <li>
-          <a class='avatar'>
-            <span>Ruly</span>
-            <img src='img/avatar.jpg'>
-            <span><i class="icon-angle-down"></i></span>
-          </a>
-
-          <ul class="action-dropdown">
-            <span class="arrow"></span>
-            <li class='top'>
-              <img src='img/avatar1.jpg'>
-              <span class="user-name">Ruly</span>
-              <span class="user-email">surgesoft@gmail.com</span>
-            </li>
-            <li class='normal'><a href='#'>Manager Profile</a></li>
-            <li class='normal'><a href='#'>Mail</a></li>
-            <li class="split"></li>
-            <li class='normal'><a href='#'>Invite someone to CW</a></li>
-            <li class="split"></li>
-            <li class='normal'><a href='#'>Help</a></li>
-            <li class="split"></li>
-            <li class='normal'><a href='#'>Log Out</a></li>
-            <span class="shadow shadow-left"></span>
-            <span class="shadow shadow-right"></span>
-            <span class="shadow shadow-bottom"></span>
-          </ul>
-        </li>
-      </ul>
-    </section>
-  </nav>
- 
-  <script src='javascripts/vendor/zepto.js'></script>
-  <script src="javascripts/foundation/foundation.js"></script>
-  <script src="javascripts/foundation/foundation.alerts.js"></script>
-  <script src="javascripts/foundation/foundation.clearing.js"></script>
-  <script src="javascripts/foundation/foundation.cookie.js"></script>
-  <script src="javascripts/foundation/foundation.dropdown.js"></script>
-  <script src="javascripts/foundation/foundation.forms.js"></script>
-  <script src="javascripts/foundation/foundation.joyride.js"></script>
-  <script src="javascripts/foundation/foundation.magellan.js"></script>
-  <script src="javascripts/foundation/foundation.orbit.js"></script>
-  <script src="javascripts/foundation/foundation.placeholder.js"></script>
-  <script src="javascripts/foundation/foundation.reveal.js"></script>
-  <script src="javascripts/foundation/foundation.section.js"></script>
-  <script src="javascripts/foundation/foundation.tooltips.js"></script>
-  <script src="javascripts/foundation/foundation.topbar.js"></script>
-
-    <script src='javascripts/app.js'></script>
-  </body>
-  </html>
+  {$part:nav}
+  <section class="main">
+    <div class="row collapse">
+      <div class="columns large-6">
+        <input type="text" value='Untitled Document'>
+        <textarea class='editor' id='editor'></textarea>
+      </div>
+    </div>
+  </section> 
+  {$part:script}
+</body>
+</html>
