--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -25,7 +25,7 @@ $em-base: 16px !default;
 
 // $default-float: left;
 
-// $body-bg: #fff;
+$body-bg: #f5f3ee;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $body-font-weight: 600;
