--- a/application/view/part_template/script.rhtml
+++ b/application/view/part_template/script.rhtml
@@ -1,4 +1,5 @@
   <script src='javascripts/vendor/zepto.js'></script>
+  <script src='javascripts/vendor/markdown.js'></script>
   <script src="javascripts/foundation/foundation.js"></script>
   <script src="javascripts/foundation/foundation.alerts.js"></script>
   <script src="javascripts/foundation/foundation.clearing.js"></script>
