--- a/application/view/index/index.rhtml
+++ b/application/view/index/index.rhtml
@@ -25,7 +25,7 @@
   {$part:nav}
   <div id="wmd-button-bar" style='display:none'></div>
   <section class="main">
-    <div class="row">
+    <div class="row editor">
       <div class="columns large-6">
         <input type="text" value='Untitled Document'>
         <textarea class='editor' id='wmd-input'>
