--- a/sass/app.scss
+++ b/sass/app.scss
@@ -87,12 +87,12 @@ span.shadow{
 	}
 }
 
-@media screen and (min-width: 960px){
+@media screen and (min-width: 1024px){
 	body{
 		padding:1.5em 1.5em 0 1.5em;
 	}
 }
-@media screen and (max-width: 960px){
+@media screen and (max-width: 1024px){
 	body{
 		padding:0;
 	}
@@ -114,14 +114,42 @@ span.shadow{
 		}
 	}
 	.name{
+		float: left;
 		position: relative;
 		bottom: 10px;
 		h1{
 			padding:  0 25px;
+			a{
+				width: auto;
+			}
 		}
 		.logo{
 			width:36px;
 			height: 36px;
+		}
+	}
+	ul.title-area{
+		li.actions{
+		float:left;
+		margin-top: 10px;
+			ul.actionbar{
+				display: inline;
+				margin-right: 25px;
+				float: left;
+				width: auto;
+				height: auto;
+				li{
+					float: left;
+					a:not(.botton){
+						color:#2b2b2b;
+						padding: 10px 15px;
+					}
+					a:not(.botton):hover{
+						color:#F8F8F8;
+						background-color: #69bed7;
+					}
+				}
+			}
 		}
 	}
 }
@@ -143,9 +171,9 @@ span.shadow{
 			a:not(.botton){
 				padding: 0 35px;
 			}
-			@media screen and (max-width: 960px){
+			@media screen and (max-width: 1024px){
 				a:not(.botton){
-					padding: 5px 35px;
+					padding: 0px 20px;
 				}
 			}
 			a:not(.button):hover,a.active{
@@ -176,9 +204,11 @@ span.shadow{
 				}
 			}
 		}
+
 	}
 	ul.right{
 		li{
+			margin-right: 24px;
 			ul.action-dropdown{
 				display: none;
 				background: none;
@@ -188,7 +218,7 @@ span.shadow{
 				right: 30px;
 				z-index: 2013;
 				li{
-					margin-left: 10px;
+					margin: 0 0 0 10px;
 					padding: 0 25px 0 80px;
 					font-size: 12px;
 					background-color: white;
@@ -253,7 +283,7 @@ span.shadow{
 				span.arrow{
 					display: block;
 					position: absolute;
-					right: 65px;
+					right: 20px;
 					top:-24px;
 					width:25px;
 					height: 25px;
