--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -6575,13 +6575,13 @@ span.shadow.shadow-right {
   background-size: 10px 100% !important;
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1024px) {
   /* line 91, ../sass/app.scss */
   body {
     padding: 1.5em 1.5em 0 1.5em;
   }
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1024px) {
   /* line 96, ../sass/app.scss */
   body {
     padding: 0;
@@ -6608,80 +6608,116 @@ span.shadow.shadow-right {
 }
 /* line 116, ../sass/app.scss */
 .top-bar .name {
+  float: left;
   position: relative;
   bottom: 10px;
 }
-/* line 119, ../sass/app.scss */
+/* line 120, ../sass/app.scss */
 .top-bar .name h1 {
   padding: 0 25px;
 }
 /* line 122, ../sass/app.scss */
+.top-bar .name h1 a {
+  width: auto;
+}
+/* line 126, ../sass/app.scss */
 .top-bar .name .logo {
   width: 36px;
   height: 36px;
 }
+/* line 132, ../sass/app.scss */
+.top-bar ul.title-area li.actions {
+  float: left;
+  margin-top: 10px;
+}
+/* line 135, ../sass/app.scss */
+.top-bar ul.title-area li.actions ul.actionbar {
+  display: inline;
+  margin-right: 25px;
+  float: left;
+  width: auto;
+  height: auto;
+}
+/* line 141, ../sass/app.scss */
+.top-bar ul.title-area li.actions ul.actionbar li {
+  float: left;
+}
+/* line 143, ../sass/app.scss */
+.top-bar ul.title-area li.actions ul.actionbar li a:not(.botton) {
+  color: #2b2b2b;
+  padding: 10px 15px;
+}
+/* line 147, ../sass/app.scss */
+.top-bar ul.title-area li.actions ul.actionbar li a:not(.botton):hover {
+  color: #F8F8F8;
+  background-color: #69bed7;
+}
 
-/* line 130, ../sass/app.scss */
+/* line 158, ../sass/app.scss */
 .top-bar-section ul {
   background: #F8F8F8;
 }
-/* line 132, ../sass/app.scss */
+/* line 160, ../sass/app.scss */
 .top-bar-section ul li {
   border-right: 1px solid #f8f8f8;
 }
-/* line 134, ../sass/app.scss */
+/* line 162, ../sass/app.scss */
 .top-bar-section ul li.split {
   border-left: 1px solid #ccc;
 }
-/* line 137, ../sass/app.scss */
+/* line 165, ../sass/app.scss */
 .top-bar-section ul li a {
   background: #F8F8F8;
 }
-/* line 139, ../sass/app.scss */
+/* line 167, ../sass/app.scss */
 .top-bar-section ul li a i {
   margin: 0 5px;
 }
-/* line 143, ../sass/app.scss */
+/* line 171, ../sass/app.scss */
 .top-bar-section ul li a:not(.botton) {
   padding: 0 35px;
 }
-@media screen and (max-width: 960px) {
-  /* line 147, ../sass/app.scss */
+@media screen and (max-width: 1024px) {
+  /* line 175, ../sass/app.scss */
   .top-bar-section ul li a:not(.botton) {
-    padding: 5px 35px;
+    padding: 0px 20px;
   }
 }
-/* line 151, ../sass/app.scss */
+/* line 179, ../sass/app.scss */
 .top-bar-section ul li a:not(.button):hover, .top-bar-section ul li a.active {
   color: #F8F8F8;
   background-color: #69bed7;
 }
-/* line 156, ../sass/app.scss */
+/* line 184, ../sass/app.scss */
 .top-bar-section ul li .avatar {
   cursor: pointer;
 }
-/* line 158, ../sass/app.scss */
+/* line 186, ../sass/app.scss */
 .top-bar-section ul li .avatar span {
   margin: 0 8px;
 }
-/* line 161, ../sass/app.scss */
+/* line 189, ../sass/app.scss */
 .top-bar-section ul li .avatar i {
   font-size: 20px;
   position: relative;
   top: 2px;
 }
-/* line 166, ../sass/app.scss */
+/* line 194, ../sass/app.scss */
 .top-bar-section ul li .avatar img {
   width: 26px;
   height: 26px;
   border: 1px solid #b4b9c1;
   border-radius: 2px;
 }
-/* line 174, ../sass/app.scss */
+/* line 202, ../sass/app.scss */
 .top-bar-section ul li .avatar:hover img {
   border-color: #5ebbc2;
 }
-/* line 182, ../sass/app.scss */
+/* line 210, ../sass/app.scss */
+.top-bar-section ul.right li {
+  margin-right: 24px;
+}
+/* line 212, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown {
   display: none;
   background: none;
@@ -6691,15 +6727,15 @@ span.shadow.shadow-right {
   right: 30px;
   z-index: 2013;
 }
-/* line 190, ../sass/app.scss */
+/* line 220, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li {
-  margin-left: 10px;
+  margin: 0 0 0 10px;
   padding: 0 25px 0 80px;
   font-size: 12px;
   background-color: white;
   float: none;
 }
-/* line 197, ../sass/app.scss */
+/* line 227, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li a {
   margin: 0;
   padding: 10px 0;
@@ -6707,36 +6743,36 @@ span.shadow.shadow-right {
   line-height: 20px;
   color: #584f4f;
 }
-/* line 204, ../sass/app.scss */
+/* line 234, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li a:hover {
   color: #1491ad;
 }
-/* line 209, ../sass/app.scss */
+/* line 239, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal i {
   position: absolute;
   margin-left: -30px;
   margin-top: 3px;
 }
-/* line 216, ../sass/app.scss */
+/* line 246, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover {
   background-color: #69bed7;
   color: #F8F8F8;
 }
-/* line 219, ../sass/app.scss */
+/* line 249, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover a {
   color: #F8F8F8;
 }
-/* line 223, ../sass/app.scss */
+/* line 253, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.split {
   padding: 0;
   border-bottom: 1px dotted #e9e9e9;
 }
-/* line 227, ../sass/app.scss */
+/* line 257, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top {
   padding: 5px 5px 0 80px;
   height: 74px;
 }
-/* line 231, ../sass/app.scss */
+/* line 261, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top img {
   position: absolute;
   left: 15px;
@@ -6744,27 +6780,27 @@ span.shadow.shadow-right {
   width: 64px;
   height: 64px;
 }
-/* line 238, ../sass/app.scss */
+/* line 268, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span {
   display: block;
   width: 180px;
 }
-/* line 243, ../sass/app.scss */
+/* line 273, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-name {
   color: #1491ad;
   line-height: 25px;
   padding-top: 5px;
 }
-/* line 248, ../sass/app.scss */
+/* line 278, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-email {
   font-size: 12px;
   color: gray;
 }
-/* line 253, ../sass/app.scss */
+/* line 283, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown span.arrow {
   display: block;
   position: absolute;
-  right: 65px;
+  right: 20px;
   top: -24px;
   width: 25px;
   height: 25px;
@@ -6773,22 +6809,22 @@ span.shadow.shadow-right {
   border-bottom: 24px solid #fff;
 }
 
-/* line 269, ../sass/app.scss */
+/* line 299, ../sass/app.scss */
 section.main {
   color: #584f4f;
   background-color: #F8F8F8;
 }
-/* line 272, ../sass/app.scss */
+/* line 302, ../sass/app.scss */
 section.main .row {
   max-width: 100%;
   padding: 0 10px;
 }
-/* line 276, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 section.main .editor {
   resize: none;
   line-height: 155%;
 }
-/* line 281, ../sass/app.scss */
+/* line 311, ../sass/app.scss */
 section.main .preview {
   background-color: white;
   overflow-y: scroll;
@@ -6796,16 +6832,16 @@ section.main .preview {
   font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   position: relative;
 }
-/* line 288, ../sass/app.scss */
+/* line 318, ../sass/app.scss */
 section.main .preview .inner {
   position: relative;
 }
-/* line 290, ../sass/app.scss */
+/* line 320, ../sass/app.scss */
 section.main .preview .inner * {
   position: relative;
 }
 
-/* line 296, ../sass/app.scss */
+/* line 326, ../sass/app.scss */
 .helper {
   position: absolute;
   height: 0;
