--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -321,6 +321,12 @@ section.main{
 				position: relative;
 			}
 		}
+		h1{
+			font-size: 2em;
+		}
+		h2{ 
+			font-size: 1.5em;
+		}
 	}
 }
 .helper{
