--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -91,6 +91,21 @@ span.shadow{
 	body{
 		padding:1.5em 1.5em 0 1.5em;
 	}
+	body.fullwidth{
+		padding: 0;
+		.top-bar{
+			padding: 10px 0 0 0;
+		}
+		section.main{
+			.row{
+				padding: 0;
+				.columns{
+					padding-left: 0.3em;
+					padding-right: 0.3em;
+				}
+			}
+		}
+	}
 }
 @media screen and (max-width: 1024px){
 	body{
