--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -89,7 +89,25 @@ span.shadow{
 
 @media screen and (min-width: 1024px){
 	body{
+		background-image: url(/img/bg.jpg);
 		padding:1.5em 1.5em 0 1.5em;
+		.notice{
+			position: absolute;
+			left: 1.5em;
+			bottom: 1.5;
+			width: 150px;
+			ul{
+				list-style: none;
+				li{
+					text-align: center;
+					padding: 0.2em 0;	
+					color: white;
+					&.normal{
+						background-color: #414f5a;
+					}
+				}
+			}
+		}
 	}
 	body.fullwidth{
 		padding: 0;
@@ -110,6 +128,7 @@ span.shadow{
 @media screen and (max-width: 1024px){
 	body{
 		padding:0;
+
 	}
 	
 }
