--- a/public/sass/_settings.scss
+++ b/public/sass/_settings.scss
@@ -325,7 +325,7 @@ $input-focus-box-shadow:none;
 
 // Button border styles.
 
-// $button-border-width: 1px;
+ $button-border-width: 0;
 // $button-border-style: solid;
 // $button-border-color: darken($primary-color, $button-function-factor);
 
