--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -46,9 +46,14 @@
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
 
-
+.template{
+	display: none !important;
+}
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus {
 	box-shadow: none;
+}
+.whitewrap{
+	text-indent: -9999px;
 }
 .shadow-box{
 	border:1px solid #cccccc;
@@ -89,7 +94,12 @@ span.shadow{
 
 @media screen and (min-width: 1024px){
 	body{
+		&.full{
+			padding: 0;
+		}
+
 		background-image: url(/img/bg.jpg);
+
 		padding:1.5em 1.5em 0 1.5em;
 		.notice{
 			position: absolute;
@@ -128,7 +138,7 @@ span.shadow{
 @media screen and (max-width: 1024px){
 	body{
 		padding:0;
-
+		background-image: url(/img/bg.jpg);
 	}
 	
 }
@@ -369,4 +379,46 @@ section.main{
 		top: -100px;
 }
 
+
+.login-panel{
+	width: 100%;
+	height: 400px;
+	margin-top: 20%;
+	background-color: #F8F8F8;
+	h3{
+			color:#444444;
+			margin-bottom: 25px;
+	}
+	.form{
+
+
+		form{
+			padding: 0px 30px;
+			input{
+				margin-bottom: 25px;
+			}
+		}
+	}
+
+	.title{
+		height: 40px;
+		
+		.close{
+			display: block;
+			width: 30px;
+			height: 30px;
+			font-size: 20px;
+			padding: 8px;
+			cursor: pointer;
+			float:right;
+
+			background-color: black;
+			color:white;
+			&:hover{
+				background-color:#3e3e3e;
+			}
+		}
+	}
+	
+}
 
