--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -59,6 +59,10 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus
 	border:1px solid #cccccc;
 	margin: 0 auto;
 }
+.underline a{
+	text-decoration: underline;
+	color: #7e7e7e;
+}
 span.shadow{
 	display: block;
 	position: absolute;
@@ -382,18 +386,51 @@ section.main{
 
 .login-panel{
 	width: 100%;
-	height: 400px;
 	margin-top: 20%;
 	background-color: #F8F8F8;
 	h3{
 			color:#444444;
 			margin-bottom: 25px;
 	}
+	.logins{
+		margin: 10px 40px;
+		text-align: center;
+		height: 120px;
+	}
+	.join{
+		font-weight: normal;
+		margin: 0 20px;
+	}
+	.footline{
+		height: 60px;
+		margin: 2px;
+		padding: 15px;
+		background-color: #ccc;
+		border-bottom: 2px solid #f8f8f8;
+		font-weight: normal;
+		a{
+			font-weight: bold;
+		}
+	}
+	.recommand{
+		margin: 30px 60px;
+		border-top: 1px solid #ccc;
+		text-align: center;
+		span{
+			background-color: #f8f8f8;
+			position: absolute;
+			color:#888;
+			font-weight: normal;
+			left: 30%;
+			top: 20px;
+			padding: 0 10px;
+		}
+	}
 	.form{
-
 
 		form{
 			padding: 0px 30px;
+			border-right: 2px solid #dbdbdb;
 			input{
 				margin-bottom: 25px;
 			}
@@ -408,12 +445,16 @@ section.main{
 			width: 30px;
 			height: 30px;
 			font-size: 20px;
+			line-height: 10px;
 			padding: 8px;
+			font-family: Arial;
 			cursor: pointer;
 			float:right;
 
 			background-color: black;
-			color:white;
+			a{
+				color:white;
+			}
 			&:hover{
 				background-color:#3e3e3e;
 			}
