--- a/application/views/partical/scripts.phtml
+++ b/application/views/partical/scripts.phtml
@@ -1,4 +1,5 @@
 <script src="/javascripts/vendor/jquery.js"> </script>
+<script src="/javascripts/vendor/base64.min.js"></script>
 <script src="/javascripts/foundation/foundation.js"></script>
 <script src="/javascripts/foundation/foundation.alerts.js"></script>
 <script src="/javascripts/foundation/foundation.clearing.js"></script>
@@ -13,3 +14,5 @@
 <script src="/javascripts/foundation/foundation.section.js"></script>
 <script src="/javascripts/foundation/foundation.tooltips.js"></script>
 <script src="/javascripts/foundation/foundation.topbar.js"></script>
+<script src="/javascripts/validator.js"></script>
+<script src="/javascripts/form.validator.js"></script>
