--- a/application/views/partical/nav.phtml
+++ b/application/views/partical/nav.phtml
@@ -28,35 +28,35 @@
       <li>
         <a class='avatar template' data-template='logined'>
           <script type="text/template">
-          <% if (login) { %>
-          <span>Ruly</span>
-          <img src='img/avatar.jpg'>
-          <span><i class="icon-angle-down"></i></span>
-          <% } else { %>
-          <span><i class="icon-signin"></i> Log In</span>
-          <% } %>
+            <% if (login) { %>
+            <span>Ruly</span>
+            <img src='img/avatar.jpg'>
+            <span><i class="icon-angle-down"></i></span>
+            <% } else { %>
+            <span><i class="icon-signin"></i> Log In</span>
+            <% } %>
           </script>
         </a>
 
         <ul class="action-dropdown template" data-template='logined-drop'>
           <script type="text/template">
-          <span class="arrow"></span>
-          <li class='top'>
-            <img src='img/avatar1.jpg'>
-            <span class="user-name">Ruly</span>
-            <span class="user-email">surgesoft@gmail.com</span>
-          </li>
-          <li class='normal'><a href='#'><i class="icon-info"></i>Manager Profile</a></li>
-          <li class='normal'><a href='#'><i class="icon-envelope"></i>Mail</a></li>
-          <li class="split"></li>
-          <li class='normal'><a href='#'>Invite someone to CW</a></li>
-          <li class="split"></li>
-          <li class='normal'><a href='#'><i class="icon-question"></i>Help</a></li>
-          <li class="split"></li>
-          <li class='normal'><a href='#'><i class="icon-signout"></i>Log Out</a></li>
-          <span class="shadow shadow-left"></span>
-          <span class="shadow shadow-right"></span>
-          <span class="shadow shadow-bottom"></span>
+            <span class="arrow"></span>
+            <li class='top'>
+              <img src='img/avatar1.jpg'>
+              <span class="user-name">Ruly</span>
+              <span class="user-email">surgesoft@gmail.com</span>
+            </li>
+            <li class='normal'><a href='#'><i class="icon-info"></i>Manager Profile</a></li>
+            <li class='normal'><a href='#'><i class="icon-envelope"></i>Mail</a></li>
+            <li class="split"></li>
+            <li class='normal'><a href='#'>Invite someone to CW</a></li>
+            <li class="split"></li>
+            <li class='normal'><a href='#'><i class="icon-question"></i>Help</a></li>
+            <li class="split"></li>
+            <li class='normal'><a href='/logout'><i class="icon-signout"></i>Log Out</a></li>
+            <span class="shadow shadow-left"></span>
+            <span class="shadow shadow-right"></span>
+            <span class="shadow shadow-bottom"></span>
           </script>
         </ul>
       </li>
