--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -45,7 +45,9 @@
 // @import "foundation/components/thumbs";
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
-
+html{
+	font-size: 16px;
+}
 .template{
 	display: none !important;
 }
@@ -277,7 +279,7 @@ span.shadow{
 				li{
 					margin: 0 0 0 10px;
 					padding: 0 25px 0 80px;
-					font-size: 12px;
+					font-size: 14px;
 					background-color: white;
 					float: none;
 					
@@ -333,7 +335,7 @@ span.shadow{
 						padding-top: 5px;
 					}
 					span.user-email{
-						font-size: 12px;
+						font-size: 14px;
 						color:gray;
 					}
 				}
