--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7217,40 +7217,45 @@ a.th {
   max-width: 800px;
 }
 
-/* line 49, ../sass/app.scss */
+/* line 48, ../sass/app.scss */
+html {
+  font-size: 16px;
+}
+
+/* line 51, ../sass/app.scss */
 .template {
   display: none !important;
 }
 
-/* line 52, ../sass/app.scss */
+/* line 54, ../sass/app.scss */
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus {
   box-shadow: none;
 }
 
-/* line 55, ../sass/app.scss */
+/* line 57, ../sass/app.scss */
 .whitewrap {
   text-indent: -9999px;
 }
 
-/* line 58, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 .shadow-box {
   border: 1px solid #cccccc;
   margin: 0 auto;
 }
 
-/* line 62, ../sass/app.scss */
+/* line 64, ../sass/app.scss */
 .error {
   margin: 0 10px;
   color: red;
 }
 
-/* line 66, ../sass/app.scss */
+/* line 68, ../sass/app.scss */
 .underline a {
   text-decoration: underline;
   color: #7e7e7e;
 }
 
-/* line 70, ../sass/app.scss */
+/* line 72, ../sass/app.scss */
 span.shadow {
   display: block;
   position: absolute;
@@ -7259,7 +7264,7 @@ span.shadow {
   right: 0;
   bottom: 0;
 }
-/* line 77, ../sass/app.scss */
+/* line 79, ../sass/app.scss */
 span.shadow.shadow-left {
   right: 100%;
   top: 0;
@@ -7268,7 +7273,7 @@ span.shadow.shadow-left {
   background-image: url("/img/shadow-left.png");
   background-size: 10px 100% !important;
 }
-/* line 85, ../sass/app.scss */
+/* line 87, ../sass/app.scss */
 span.shadow.shadow-bottom {
   top: 100%;
   left: 4%;
@@ -7277,7 +7282,7 @@ span.shadow.shadow-bottom {
   background-image: url("/img/shadow-bottom.png");
   background-size: 100% 18px !important;
 }
-/* line 93, ../sass/app.scss */
+/* line 95, ../sass/app.scss */
 span.shadow.shadow-right {
   top: 0;
   left: 100%;
@@ -7288,112 +7293,112 @@ span.shadow.shadow-right {
 }
 
 @media screen and (min-width: 1024px) {
-  /* line 104, ../sass/app.scss */
+  /* line 106, ../sass/app.scss */
   body {
     background-image: url(/img/bg.jpg);
     padding: 1.5em 1.5em 0 1.5em;
   }
-  /* line 105, ../sass/app.scss */
+  /* line 107, ../sass/app.scss */
   body.full {
     padding: 0;
   }
-  /* line 107, ../sass/app.scss */
+  /* line 109, ../sass/app.scss */
   body.full h1 {
     position: absolute;
     top: 60px;
     color: white;
   }
-  /* line 117, ../sass/app.scss */
+  /* line 119, ../sass/app.scss */
   body .notice {
     position: absolute;
     left: 1.5em;
     bottom: 1.5;
     width: 150px;
   }
-  /* line 122, ../sass/app.scss */
+  /* line 124, ../sass/app.scss */
   body .notice ul {
     list-style: none;
   }
-  /* line 124, ../sass/app.scss */
+  /* line 126, ../sass/app.scss */
   body .notice ul li {
     text-align: center;
     padding: 0.2em 0;
     color: white;
   }
-  /* line 128, ../sass/app.scss */
+  /* line 130, ../sass/app.scss */
   body .notice ul li.normal {
     background-color: #414f5a;
   }
 
-  /* line 135, ../sass/app.scss */
+  /* line 137, ../sass/app.scss */
   body.fullwidth {
     padding: 0;
   }
-  /* line 137, ../sass/app.scss */
+  /* line 139, ../sass/app.scss */
   body.fullwidth .top-bar {
     padding: 10px 0 0 0;
   }
-  /* line 141, ../sass/app.scss */
+  /* line 143, ../sass/app.scss */
   body.fullwidth section.main .row {
     padding: 0;
   }
-  /* line 143, ../sass/app.scss */
+  /* line 145, ../sass/app.scss */
   body.fullwidth section.main .row .columns {
     padding-left: 0.3em;
     padding-right: 0.3em;
   }
 }
 @media screen and (max-width: 1024px) {
-  /* line 152, ../sass/app.scss */
+  /* line 154, ../sass/app.scss */
   body {
     padding: 0;
     background-image: url(/img/bg.jpg);
   }
 }
 @media screen and (max-width: 800px) {
-  /* line 159, ../sass/app.scss */
+  /* line 161, ../sass/app.scss */
   ul.right {
     display: none;
   }
 }
-/* line 164, ../sass/app.scss */
+/* line 166, ../sass/app.scss */
 .top-bar {
   height: 75px;
   padding: 30px 0 0 0;
 }
-/* line 167, ../sass/app.scss */
+/* line 169, ../sass/app.scss */
 .top-bar.expanded {
   padding: 0;
 }
-/* line 169, ../sass/app.scss */
+/* line 171, ../sass/app.scss */
 .top-bar.expanded .name {
   bottom: 0;
 }
-/* line 173, ../sass/app.scss */
+/* line 175, ../sass/app.scss */
 .top-bar .name {
   float: left;
   position: relative;
   bottom: 10px;
 }
-/* line 177, ../sass/app.scss */
+/* line 179, ../sass/app.scss */
 .top-bar .name h1 {
   padding: 0 25px;
 }
-/* line 179, ../sass/app.scss */
+/* line 181, ../sass/app.scss */
 .top-bar .name h1 a {
   width: auto;
 }
-/* line 183, ../sass/app.scss */
+/* line 185, ../sass/app.scss */
 .top-bar .name .logo {
   width: 36px;
   height: 36px;
 }
-/* line 189, ../sass/app.scss */
+/* line 191, ../sass/app.scss */
 .top-bar ul.title-area li.actions {
   float: left;
   margin-top: 10px;
 }
-/* line 192, ../sass/app.scss */
+/* line 194, ../sass/app.scss */
 .top-bar ul.title-area li.actions ul.actionbar {
   display: inline;
   margin-right: 25px;
@@ -7401,86 +7406,86 @@ span.shadow.shadow-right {
   width: auto;
   height: auto;
 }
-/* line 198, ../sass/app.scss */
+/* line 200, ../sass/app.scss */
 .top-bar ul.title-area li.actions ul.actionbar li {
   float: left;
 }
-/* line 200, ../sass/app.scss */
+/* line 202, ../sass/app.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton) {
   color: #2b2b2b;
   padding: 10px 15px;
 }
-/* line 204, ../sass/app.scss */
+/* line 206, ../sass/app.scss */
 .top-bar ul.title-area li.actions ul.actionbar li a:not(.botton):hover {
   color: #F8F8F8;
   background-color: #69bed7;
 }
 
-/* line 215, ../sass/app.scss */
+/* line 217, ../sass/app.scss */
 .top-bar-section ul {
   background: #F8F8F8;
 }
-/* line 217, ../sass/app.scss */
+/* line 219, ../sass/app.scss */
 .top-bar-section ul li {
   border-right: 1px solid #f8f8f8;
 }
-/* line 219, ../sass/app.scss */
+/* line 221, ../sass/app.scss */
 .top-bar-section ul li.split {
   border-left: 1px solid #ccc;
 }
-/* line 222, ../sass/app.scss */
+/* line 224, ../sass/app.scss */
 .top-bar-section ul li a {
   background: #F8F8F8;
 }
-/* line 224, ../sass/app.scss */
+/* line 226, ../sass/app.scss */
 .top-bar-section ul li a i {
   margin: 0 5px;
 }
-/* line 228, ../sass/app.scss */
+/* line 230, ../sass/app.scss */
 .top-bar-section ul li a:not(.botton) {
   padding: 0 35px;
 }
 @media screen and (max-width: 1024px) {
-  /* line 232, ../sass/app.scss */
+  /* line 234, ../sass/app.scss */
   .top-bar-section ul li a:not(.botton) {
     padding: 0px 20px;
   }
 }
-/* line 236, ../sass/app.scss */
+/* line 238, ../sass/app.scss */
 .top-bar-section ul li a:not(.button):hover, .top-bar-section ul li a.active {
   color: #F8F8F8;
   background-color: #69bed7;
 }
-/* line 241, ../sass/app.scss */
+/* line 243, ../sass/app.scss */
 .top-bar-section ul li .avatar {
   cursor: pointer;
 }
-/* line 243, ../sass/app.scss */
+/* line 245, ../sass/app.scss */
 .top-bar-section ul li .avatar span {
   margin: 0 8px;
 }
-/* line 246, ../sass/app.scss */
+/* line 248, ../sass/app.scss */
 .top-bar-section ul li .avatar i {
   font-size: 20px;
   position: relative;
   top: 2px;
 }
-/* line 251, ../sass/app.scss */
+/* line 253, ../sass/app.scss */
 .top-bar-section ul li .avatar img {
   width: 26px;
   height: 26px;
   border: 1px solid #b4b9c1;
   border-radius: 2px;
 }
-/* line 259, ../sass/app.scss */
+/* line 261, ../sass/app.scss */
 .top-bar-section ul li .avatar:hover img {
   border-color: #5ebbc2;
 }
-/* line 267, ../sass/app.scss */
+/* line 269, ../sass/app.scss */
 .top-bar-section ul.right li {
   margin-right: 24px;
 }
-/* line 269, ../sass/app.scss */
+/* line 271, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown {
   display: none;
   background: none;
@@ -7490,15 +7495,15 @@ span.shadow.shadow-right {
   right: 30px;
   z-index: 2013;
 }
-/* line 277, ../sass/app.scss */
+/* line 279, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li {
   margin: 0 0 0 10px;
   padding: 0 25px 0 80px;
-  font-size: 12px;
+  font-size: 14px;
   background-color: white;
   float: none;
 }
-/* line 284, ../sass/app.scss */
+/* line 286, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li a {
   margin: 0;
   padding: 10px 0;
@@ -7506,36 +7511,36 @@ span.shadow.shadow-right {
   line-height: 20px;
   color: #584f4f;
 }
-/* line 291, ../sass/app.scss */
+/* line 293, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li a:hover {
   color: #1491ad;
 }
-/* line 296, ../sass/app.scss */
+/* line 298, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal i {
   position: absolute;
   margin-left: -30px;
   margin-top: 3px;
 }
-/* line 303, ../sass/app.scss */
+/* line 305, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover {
   background-color: #69bed7;
   color: #F8F8F8;
 }
-/* line 306, ../sass/app.scss */
+/* line 308, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.normal:hover a {
   color: #F8F8F8;
 }
-/* line 310, ../sass/app.scss */
+/* line 312, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.split {
   padding: 0;
   border-bottom: 1px dotted #e9e9e9;
 }
-/* line 314, ../sass/app.scss */
+/* line 316, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top {
   padding: 5px 5px 0 80px;
   height: 74px;
 }
-/* line 318, ../sass/app.scss */
+/* line 320, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top img {
   position: absolute;
   left: 15px;
@@ -7543,23 +7548,23 @@ span.shadow.shadow-right {
   width: 64px;
   height: 64px;
 }
-/* line 325, ../sass/app.scss */
+/* line 327, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span {
   display: block;
   width: 180px;
 }
-/* line 330, ../sass/app.scss */
+/* line 332, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-name {
   color: #1491ad;
   line-height: 25px;
   padding-top: 5px;
 }
-/* line 335, ../sass/app.scss */
+/* line 337, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown li.top span.user-email {
-  font-size: 12px;
+  font-size: 14px;
   color: gray;
 }
-/* line 340, ../sass/app.scss */
+/* line 342, ../sass/app.scss */
 .top-bar-section ul.right li ul.action-dropdown span.arrow {
   display: block;
   position: absolute;
@@ -7572,22 +7577,22 @@ span.shadow.shadow-right {
   border-bottom: 24px solid #fff;
 }
 
-/* line 356, ../sass/app.scss */
+/* line 358, ../sass/app.scss */
 section.main {
   color: #584f4f;
   background-color: #F8F8F8;
 }
-/* line 359, ../sass/app.scss */
+/* line 361, ../sass/app.scss */
 section.main .row {
   max-width: 100%;
   padding: 0 10px;
 }
-/* line 363, ../sass/app.scss */
+/* line 365, ../sass/app.scss */
 section.main .editor {
   resize: none;
   line-height: 155%;
 }
-/* line 368, ../sass/app.scss */
+/* line 370, ../sass/app.scss */
 section.main .preview {
   background-color: white;
   overflow-y: scroll;
@@ -7595,53 +7600,53 @@ section.main .preview {
   font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   position: relative;
 }
-/* line 375, ../sass/app.scss */
+/* line 377, ../sass/app.scss */
 section.main .preview .inner {
   position: relative;
 }
-/* line 377, ../sass/app.scss */
+/* line 379, ../sass/app.scss */
 section.main .preview .inner * {
   position: relative;
 }
-/* line 381, ../sass/app.scss */
+/* line 383, ../sass/app.scss */
 section.main .preview h1 {
   font-size: 2em;
 }
-/* line 384, ../sass/app.scss */
+/* line 386, ../sass/app.scss */
 section.main .preview h2 {
   font-size: 1.5em;
 }
 
-/* line 389, ../sass/app.scss */
+/* line 391, ../sass/app.scss */
 .helper {
   position: absolute;
   height: 0;
   top: -100px;
 }
 
-/* line 396, ../sass/app.scss */
+/* line 398, ../sass/app.scss */
 .login-panel {
   width: 100%;
   margin-top: 20%;
   background-color: #F8F8F8;
 }
-/* line 400, ../sass/app.scss */
+/* line 402, ../sass/app.scss */
 .login-panel h3 {
   color: #444444;
   margin-bottom: 25px;
 }
-/* line 404, ../sass/app.scss */
+/* line 406, ../sass/app.scss */
 .login-panel .logins {
   margin: 10px 40px;
   text-align: center;
   height: 120px;
 }
-/* line 409, ../sass/app.scss */
+/* line 411, ../sass/app.scss */
 .login-panel .join {
   font-weight: normal;
   margin: 0 20px;
 }
-/* line 413, ../sass/app.scss */
+/* line 415, ../sass/app.scss */
 .login-panel .footline {
   height: 60px;
   margin: 2px;
@@ -7650,17 +7655,17 @@ section.main .preview h2 {
   border-bottom: 2px solid #f8f8f8;
   font-weight: normal;
 }
-/* line 420, ../sass/app.scss */
+/* line 422, ../sass/app.scss */
 .login-panel .footline a {
   font-weight: bold;
 }
-/* line 424, ../sass/app.scss */
+/* line 426, ../sass/app.scss */
 .login-panel .recommand {
   margin: 30px 60px;
   border-top: 1px solid #ccc;
   text-align: center;
 }
-/* line 428, ../sass/app.scss */
+/* line 430, ../sass/app.scss */
 .login-panel .recommand span {
   background-color: #f8f8f8;
   position: absolute;
@@ -7670,20 +7675,20 @@ section.main .preview h2 {
   top: 20px;
   padding: 0 10px;
 }
-/* line 440, ../sass/app.scss */
+/* line 442, ../sass/app.scss */
 .login-panel .form form {
   padding: 0px 30px;
   border-right: 2px solid #dbdbdb;
 }
-/* line 443, ../sass/app.scss */
+/* line 445, ../sass/app.scss */
 .login-panel .form form input {
   margin-bottom: 25px;
 }
-/* line 449, ../sass/app.scss */
+/* line 451, ../sass/app.scss */
 .login-panel .title {
   height: 40px;
 }
-/* line 452, ../sass/app.scss */
+/* line 454, ../sass/app.scss */
 .login-panel .title .close {
   display: block;
   width: 30px;
@@ -7696,11 +7701,11 @@ section.main .preview h2 {
   float: right;
   background-color: black;
 }
-/* line 464, ../sass/app.scss */
+/* line 466, ../sass/app.scss */
 .login-panel .title .close a {
   color: white;
 }
-/* line 467, ../sass/app.scss */
+/* line 469, ../sass/app.scss */
 .login-panel .title .close:hover {
   background-color: #3e3e3e;
 }
