--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -12,6 +12,7 @@
   <script>
   var require = { baseUrl : "javascripts", deps : [ "main"] };
   var viewerMode = false;
+  var Category = '{$action}';
   </script>
   <script src="javascripts/lib/require.js"></script>
   <style>
