--- a/application/views/partical/nav.phtml
+++ b/application/views/partical/nav.phtml
@@ -2,7 +2,7 @@
   <ul class="title-area">
     <!-- Title Area -->
     <li class="name">
-      <h1><a href="#"><img  class='logo' src='/img/logo.png'></a></h1>
+      <h1><a href="/"><img  class='logo' src='/img/logo.png'></a></h1>
     </li>
     <li class='actions'>
       <ul class="actionbar">
@@ -16,7 +16,7 @@
   <section class="top-bar-section">
  
     <ul class="left">
-      <li><a href="/" class='active'><span><i class="icon-pencil"></i> Write</span></a></li>
+      <li><a href="write" class='active'><span><i class="icon-pencil"></i> Write</span></a></li>
       <li class="split"></li>
       <li><a href="browse"><span>Browse</span></a></li>
       <li class="split"></li>
