--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -10,9 +10,9 @@
   <link href="stylesheets/font-awesome.css" rel="stylesheet" type="text/css"> 
   <script src="javascripts/vendor/custom.modernizr.js"></script>
   <script>
-  var require = { baseUrl : "javascripts", deps : [ "main"] };
+  var require = { baseUrl : "javascripts", deps : [ "write"] };
   var viewerMode = false;
-  var Category = '{$action}';
+  var Category = '{$controller}';
   </script>
   <script src="javascripts/lib/require.js"></script>
   <style>
