--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -10,8 +10,9 @@
   <link href="stylesheets/font-awesome.css" rel="stylesheet" type="text/css"> 
   <script src="javascripts/vendor/custom.modernizr.js"></script>
   <script>
-  var require = { baseUrl : "javascripts", deps : [ "main"] };
+  var require = { baseUrl : "javascripts", deps : [ "editor"] };
   var viewerMode = false;
+  var action = "{$action}";
   </script>
   <script src="javascripts/lib/require.js"></script>
   <style>
