--- a/application/views/partical/nav.phtml
+++ b/application/views/partical/nav.phtml
@@ -2,7 +2,7 @@
   <ul class="title-area">
     <!-- Title Area -->
     <li class="name">
-      <h1><a href="#"><img  class='logo' src='/img/logo.png'></a></h1>
+      <h1><a href="/"><img  class='logo' src='/img/logo.png'></a></h1>
     </li>
     <li class='actions'>
       <ul class="actionbar">
