view adapter fix

--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -10,7 +10,7 @@
   <link href="stylesheets/font-awesome.css" rel="stylesheet" type="text/css"> 
   <script src="javascripts/vendor/custom.modernizr.js"></script>
   <script>
-  var require = { baseUrl : "javascripts", deps : [ "editor"] };
+  var require = { baseUrl : "javascripts", deps : [ "write"] };
   var viewerMode = false;
   var Category = '{{controller}}';
   </script>
